assets/styles/layouts/_top-nav.scss
.topnav {
  display: flex;
  padding: .75rem .75rem .65rem;
  justify-content: space-between;
  position: relative;
  box-sizing: border-box;
  z-index: 99;

  .influx-home {
    font-family: 'icomoon-v2';
    font-size: 1.4rem;
    color: $topnav-link;
    text-decoration: none;
    vertical-align: middle;
    &:hover {
      color: $topnav-link-hover;
    }
    .icon-influx-logotype {
      margin-left: .6rem;
    }
  }

  .divider {
    height: 100%; border-left: 1px solid rgba($topnav-link, .5);
    margin: 0 1rem 0 .65rem;
  }

  .docs-home {
    display: inline-block;
    vertical-align: text-top;
    font-weight: $medium;
    font-size: 1.1rem;
    color: $topnav-link;
    text-decoration: none;
    &:hover {
      color: $topnav-link-hover;
    }
  }

  .topnav-left {
    margin-right: .15rem;
    padding: .25rem .15rem;
    z-index: 1;
  }

  .topnav-right {
    display: flex;
    position: absolute;
    right: .75rem;
    top: .75rem;
  }

  .selector-dropdowns {
    display: flex;
    z-index: 100;
    padding-right: .25rem;
  }

  .product-list {
    position: relative;

    #product-dropdown {
      display: inline-block;
      width: 100%;
      color: $g20-white;
      height: 2rem;
      @include gradient($grad-burningDusk, 225deg);
      background-attachment: fixed;
      font-weight: $medium;
      font-size: 1.05rem;
      border-radius: $radius * 3;
      overflow: hidden;
      cursor: pointer;
  
      &:after {
        content: "\e918";
        font-family: 'icomoon-v2';
        position: absolute;
        top: .45rem;
        right: .4rem;
        transition: all .3s;
      }
  
      .selected {
        padding: 0 1.75rem 0 .75rem;
        line-height: 0;
      }
  
      &.open {
        &:after {
          transform: rotate(180deg);
        }
      }
    }
  
    #dropdown-items {
      opacity: 0;
      height: 0;
      pointer-events: none;
      margin-top: -10px;
      transition: opacity .2s, margin-top .5s;

      &.open {
        opacity: 1;
        pointer-events: auto;
        margin-top: 0;
        height: auto;

        .product-group {
          margin: 0 0 5px;
        }
      }

      .product-group {
        @include gradient($grad-burningDusk, 225deg);
        background-attachment: fixed;
        border-radius: 6px;
        box-shadow: 1px 3px 10px $article-shadow;
        margin: 0 0 -10px;
        transition: margin .5s;

        &:last-child {
          margin: 0;
        }
      }

      .group-title {
        padding: .5rem .75rem .2rem;
        font-weight: bold;
        color: $g1-raven;
        font-size: 1rem;

        p {
          margin: 0;
          padding: .1rem .1rem .3rem;
          border-image: linear-gradient(to right, rgba($g20-white, .5) 0%, rgba($g20-white, 0) 100%) 1;
          border-bottom: 2px solid;
        }
      }
  
      ul.item-list {
        padding: 0;
        margin: 0;
        list-style: none;
  
        &.products[data-category] {
          &:before {
            content: attr(data-category);
            display: inline-block;
            margin: .5rem .75rem .15rem;
            font-size: .85rem;
            color: $g1-raven, .8;
            text-transform: uppercase;
            font-weight: bold;
            letter-spacing: .04rem;
            opacity: .75;
            mix-blend-mode: multiply;
          }
        }
      }
      a {
        display: block;
        text-decoration: none;
        font-size: 1.05rem;
        font-weight: $medium;
        white-space: nowrap;
        color: $g20-white;
        padding: .3rem 1.5rem .3rem .75rem;
        background: rgba($g20-white, 0);
        &:hover { background: rgba($g20-white, .3) }
        &.active { background: rgba($g20-white, .3) }
        &:last-child {
          border-radius: 0 0 $radius $radius;
          position: relative;
        }
        span.state {
          font-size: .9em;
          opacity: .65;
          font-style: italic;
        }
      }
    }
  }

  .buttons {
    display: flex;
    margin-left: .5rem;
  }

  .theme-switch, #search-btn, .url-trigger {
    display: inline-block;
    padding: 0;
    line-height: 0;
    color: rgba($topnav-link, .5);
    background: none;
    height: 30px;
    width: 30px;
    border: none;
    transition: color .2s, opacity .2s;
    appearance: none;
    overflow: visible;
    &:focus {
      outline: none;
    }
    &:hover {
      color: rgba($topnav-link, 1);
      cursor: pointer;
    }
    &.theme-switch-dark { display: $theme-switch-dark; font-size: 1.15rem; }
    &.theme-switch-light { display: $theme-switch-light; font-size: 1.3rem; }
  }

  .url-trigger {
    font-size: 1.1rem;
    vertical-align: top;

    z-index: 1;
  }

  .search-btn {
    width: 0;
    opacity: 0;
  }

  &.feature-board {
    .back-btn {
      color: $article-bold;
      background: rgba($article-text, .15);
      border: 1px solid rgba($article-text, 0);
      font-weight: $medium;
      text-decoration: none;
      padding: .35rem 1rem;
      border-radius: $radius;
      font-size: .9rem;
      transition: border .2s;
      &:before {
        content: '\e909';
        font-family: 'icomoon-v4';
        font-weight: bold;
        line-height: 0;
        margin: 0 .5rem 0 -.25rem;
        vertical-align: middle;
      }
      &:hover {
        text-decoration: none;
        border: 1px solid rgba($article-text, .25);
      }
    }
  }
}

////////////////////////////////////////////////////////////////////////////////
///////////////////////////////// MEDIA QUERIES ////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

@include media(medium){
  .docs-home {
    .long { display: none; }
    .short:after { content: "s" }
  }
}

@include media(small) {
  .icon-influx-logotype { display: none; }

  .topnav {
    min-height: 5.75rem;
    &.feature-board {
      min-height: auto;
    }
  }
  .topnav-right {
    flex-direction: column-reverse;
    align-items: flex-end;
    width: calc(100% - 1.5rem);
  }
  .search-btn { display: none; }

  .topnav .selector-dropdowns {
    width: 100%;
    margin-top: .6rem;
    padding-right: 0;

    .product-list {
      width: calc(100vw - 1.6rem);
      .product-dropdown { width: 100%;}
    }
    // .product-dropdown {
    //   flex-grow: 1;
    //   height: 2.24rem;
    //   .selected { padding: .12rem 1.75rem .12rem .75rem; }
    //   &:after { top: .57rem; }
    // }
  }
}

